[metadata]
name = crl
version = 0.0.1

[options]
package_dir =
    =src
packages = find_namespace:
install_requires =
    jinja2

[options.entry_points]
console_scripts =
    cake-bundler = cake_bundler.main:main

[options.extras_require]
dev = pytest

[options.packages.find]
where = src

[options.package_data]
* = *.jinja2
